--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,3 @@
-REACT_APP_API_BASE_URL=http://65.1.100.5:8010
+# REACT_APP_API_BASE_URL=http://65.1.100.5:8010
+REACT_APP_API_BASE_URL=http://13.235.18.52:8010
+ 
